<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/lightPrimaryColor"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vert_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vert_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".92"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_vert_end"
        app:layout_constraintStart_toStartOf="@+id/gl_vert_start"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_top"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_weather_state"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/weather_state"
        android:theme="@style/WeatherTextView"
        app:layout_constraintEnd_toEndOf="@+id/iv_weather_icon"
        app:layout_constraintStart_toStartOf="@+id/iv_weather_icon"
        app:layout_constraintTop_toBottomOf="@+id/iv_weather_icon" />

    <TextView
        android:id="@+id/tv_city_temp_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/city_temp"
        android:textSize="24sp"
        android:theme="@style/WeatherTextView"
        app:layout_constraintEnd_toEndOf="@+id/tv_weather_state"
        app:layout_constraintStart_toStartOf="@+id/tv_weather_state"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_state" />

    <TextView
        android:id="@+id/tv_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/feels_like"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintStart_toStartOf="@+id/iv_weather_icon"
        app:layout_constraintTop_toBottomOf="@+id/tv_city_temp_value" />

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pressure"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintStart_toStartOf="@+id/tv_feels_like"
        app:layout_constraintTop_toBottomOf="@+id/tv_feels_like_value" />

    <TextView
        android:id="@+id/tv_wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/wind_direction"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintStart_toStartOf="@+id/tv_pressure"
        app:layout_constraintTop_toBottomOf="@+id/tv_pressure_value" />

    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/wind_speed"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintStart_toStartOf="@+id/tv_wind_direction"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind_direction_value" />

    <TextView
        android:id="@+id/tv_feels_like_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/city_temp"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintBottom_toBottomOf="@+id/tv_feels_like"
        app:layout_constraintEnd_toEndOf="@+id/tv_city_temp_value"
        app:layout_constraintTop_toTopOf="@+id/tv_feels_like"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".44" />

    <TextView
        android:id="@+id/tv_pressure_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/pressure_value"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pressure"
        app:layout_constraintEnd_toEndOf="@+id/tv_feels_like_value"
        app:layout_constraintTop_toTopOf="@+id/tv_pressure"
        app:layout_constraintWidth_percent=".44" />

    <TextView
        android:id="@+id/tv_wind_direction_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wind_ne"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wind_direction"
        app:layout_constraintEnd_toEndOf="@+id/tv_pressure_value"
        app:layout_constraintTop_toTopOf="@+id/tv_wind_direction"
        app:layout_constraintWidth_percent=".44" />

    <TextView
        android:id="@+id/tv_wind_speed_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".44"
        android:text="@string/wind_speed_value"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wind_speed"
        app:layout_constraintEnd_toEndOf="@+id/tv_wind_direction_value"
        app:layout_constraintTop_toTopOf="@+id/tv_wind_speed" />

</androidx.constraintlayout.widget.ConstraintLayout>
